entity_macros/tests/ui/derive/ent/unsupported-union.stderr
error: Unions are not supported
 --> $DIR/unsupported-union.rs:4:1
  |
4 | / union TestEnt {
5 | |     a: u32,
6 | |     b: i32,
7 | | }
  | |_^
